created components and added styling

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Capstone</title>
     <link rel = "stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,500;1,300&display=swap"
+      rel="stylesheet">
   </head>
   <body>
     <div id = "root"></div>
