switched to mapbox cdn

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet">
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css"/>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
   </head>
   <body>
     <div id='root'></div>
